src/main/java/com/example/jokerexamples/dataflow/bad/service/EmailService.java
package com.example.jokerexamples.dataflow.bad.service;

import org.springframework.stereotype.Service;

/**
 * Просто сервис имитирующий отправку email
 */
@Service
public class EmailService {

    public void sendEmail(){

    }

}
